# Project-Hermes

./: README.md  poem.txt
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  MULTI_PROVIDER_README.md  Makefile  README.md  api.py  debug_imports.py  demo.py  demo_simple.py  demo_travel_plan.py  demo_with_realistic_data.py  docker-compose.yml  mypy.ini  poem.txt  pyproject.toml  ruff.toml  run_server.py  test_confidence_agent.py  test_direct_travel_crew.py  test_gemini_api.py  test_minimal_crew.py  test_mock_travel.py  test_mocked_travel.py  test_mocked_travel_crew.py  test_multi_provider.py  test_provider_priority.py  test_provider_selection.py  test_realistic_example.py  test_script.py  test_simple_crew.py  test_simple_provider.py  test_travel_planning.py  travel_crew.py  travel_crew_multi_provider.py  verify_setup.py
backend/src/project_hermes/: __init__.py  api.py  logging.py  main.py  settings.py
backend/src/project_hermes/crews/poem_crew/: poem_crew.py
backend/src/project_hermes/crews/poem_crew/config/: agents.yaml
backend/src/project_hermes/crews/travel_crew/: agents.py  flow.py  prompt_library.json  tasks.py  travel_crew.py  utils.py
backend/tests/: test_poem_flow.py  test_travel_crew.py
frontend/: .env.example  README.md  app.py  pyproject.toml
