[project]
name = "project_hermes"
version = "0.1.0"
description = "project-hermes using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
kickoff = "project_hermes.main:kickoff"
run_crew = "project_hermes.main:kickoff"
plot = "project_hermes.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
